# sibyl

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO.md  conda_env.yml  docker-compose.yaml  index.html  instructions.txt  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
backend/: rest_server.py  settings.py
backend/config/: api_key_handler.py  api_urls.env  api_urls.py  exchange_APIs.py  inference_pb2.py  inference_pb2_grpc.py
backend/db/: api_keys_db_client.py  backend_db.db  db_paths.env  query_handler.py  trade_history.db  trade_history_db_client.py
database/: api_keys_db_client.py  coin_symbol_name_map.json  db_paths.env  trade_history.db  trade_history_db_client.py
database/strategy/: strategy_db_client.py
frontend/: home_page.py  index_router.py
frontend/.streamlit/: config.toml
frontend/config/: config.env  config.py
frontend/db/: db_connector.py  frontend_db.db  stocks.json  stocks_db_client.py
frontend/pages/: 00_Forecasting.py  00_wallet.py  01_Overview.py  01_Strategy.py  01_Trading_Report.py  02_Analytics.py  03_Analytics.py  03_Strategy.py  04_Forecasting.py  04_Reporting.py  05_Reporting.py  05_Settings.py  06_Settings.py  analytics.py  explorer.py  forecasting.py  reporting.py  settings.py  strategy.py  trading_Report.py  trading_report.py  wallet.py
frontend/tab_pages/: analytics.py  crypto_chatbot.py  explorer.py  forecasting.py  reporting.py  (+8 more)
llm_gateway/: grpc_server.py  inference.proto  inference_pb2.py  inference_pb2_grpc.py  server_config.env
llm_hub/: grpc_server.py
mcp_server/: agent_pipeline.py  llm_client.py  mcp_server.py
notebooks/: dataset.ipynb  historic_data.ipynb  oracle_arima_model.ipynb  oracle_lstm_model.ipynb  oracle_object_test.ipynb  oracle_sarimax_model.ipynb  oracle_v2.ipynb  sqlalchemy_sqlcipher_test.ipynb  web_crawler.ipynb
settings/: settings.py  version.env
(+166 files in other folders)
