[project]
name = "sibyl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv==2.1.3",
    "beautifulsoup4==4.13.4",
    "chromadb==0.6.3",
    "cryptography==45.0.3",
    "duckduckgo-search==8.0.2",
    "extra-streamlit-components==0.1.71",
    "faiss-cpu==1.10.0",
    "fastapi==0.115.12",
    "grpcio==1.70.0",
    "huggingface-hub==0.29.1",
    "langchain==0.3.25",
    "langchain-community==0.3.24",
    "langchain-openai==0.3.21",
    "llama-cpp-python==0.3.9",
    "matplotlib==3.10.3",
    "nltk==3.9.1",
    "numpy==2.3.0",
    "openai==1.84.0",
    "pandas==2.3.0",
    "pillow==11.2.1",
    "plotly==6.0.0",
    "protobuf==5.29.5",
    "pydantic==2.11.5",
    "pymupdf==1.26.0",
    "python-binance==1.0.27",
    "python-dotenv==1.1.0",
    "rank-bm25==0.2.2",
    "requests==2.32.3",
    "sentence-transformers==3.4.1",
    "spacy==3.8.4",
    "sqlalchemy==2.0.38",
    "streamlit==1.45.0",
    "sumy==0.11.0",
    "ta==0.11.0",
    "tinydb==4.8.2",
    "torch==2.6.0",
    "transformers==4.49.0",
    "uvicorn==0.34.3",
    "vadersentiment==3.3.2",
    "yfinance==0.2.59",
]
